# Snake

./: CMakeLists.txt  README.md
include/Snake/: AssetManager.h  Food.h  Game.h  GameState.h  Snake.h  Window.h  World.h
src/: AssetManager.cpp  Food.cpp  Game.cpp  GameState.cpp  Globals.h  Snake.cpp  Window.cpp  World.cpp  main.cpp
