cmake_minimum_required(VERSION 3.0)
project(Snake)
include_directories(./include ./src ./libs/Console/src ./libs/Console/include)
find_package(SFML 2.5 COMPONENTS graphics system REQUIRED)
add_subdirectory( ./libs/Console)
add_executable(run ./src/main.cpp ./src/Game.cpp ./src/Window.cpp ./src/Controller.cpp ./src/Snake.cpp ./src/Food.cpp ./src/AssetManager.cpp ./src/World.cpp ./src/Game.cpp)
target_link_libraries(run sfml-graphics sfml-system sfml-audio console)
